@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.1.1.1 2004/12/26 23:55:52 jlam Exp $
+# $NetBSD: Makefile,v 1.2 2005/02/12 00:04:49 jlam Exp $
 
-DISTNAME=      	Kwiki-Scode-0.02
+DISTNAME=      	Kwiki-Scode-0.03
 PKGNAME=       	p5-${DISTNAME}
 CATEGORIES=	www perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Kwiki/}
@@ -10,7 +10,7 @@ HOMEPAGE=	http://www.kwiki.org/
 COMMENT=	Kwiki Scode plugin to protect against wiki spammers
 
 DEPENDS+=	p5-GD>=1.32:../../graphics/p5-GD
-DEPENDS+=	p5-Kwiki>=0.34:../../www/p5-Kwiki
+DEPENDS+=	p5-Kwiki>=0.36:../../www/p5-Kwiki
 
 USE_BUILDLINK3=		yes
 PERL5_PACKLIST=		${PERL5_SITEARCH}/auto/Kwiki/Scode/.packlist
