@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1.1.1 2004/12/26 23:55:52 jlam Exp $
+$NetBSD: distinfo,v 1.2 2005/02/12 00:04:49 jlam Exp $
 
-SHA1 (Kwiki-Scode-0.02.tar.gz) = 4f5143a23f9f679337ee1a7ecb3ad6a5f75b9944
-Size (Kwiki-Scode-0.02.tar.gz) = 9725 bytes
+SHA1 (Kwiki-Scode-0.03.tar.gz) = 1ea4d98868023c71eca8b6f2bab8b8f814c9aca7
+Size (Kwiki-Scode-0.03.tar.gz) = 9118 bytes
